--- a/public/index.html
+++ b/public/index.html
@@ -1,90 +1,90 @@
-<!-- index.html -->
+<!-- index.html -->  
 <!doctype html>
 
 <html>
 
-<head>
+<head>  
     <!-- META -->
     <meta charset="utf-8">
-    <!-- Optimize mobile viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- shameless self promotion -->
     <title>Digital Garage Quickstart Angular App</title>
 
     <!-- get bootstrap -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <!-- get jquery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <style>
+        .jumbotron {
+            background-color: #65bc45;
+            /* Digital Garage Green */
+            color: #ffffff;
+            padding: 100px 25px;
+        }
+        .container-fluid {
+            padding: 60px 50px;
+        }
+        .state-icon {
+            left: -5px;
+        }
+        .list-group-item-primary {
+            color: rgb(255, 255, 255);
+            background-color: rgb(66, 139, 202);
+        }
+        /* DEMO ONLY - REMOVES UNWANTED MARGIN */
+        .well .list-group {
+            margin-bottom: 0px;
+        }
+    </style>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <!-- get angularjs -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    <!-- tell angularjs where our module lives-->
+
+    <!-- get our app -->
     <script src="app.js"></script>
 
 </head>
+
 <!-- add our angularjs module and controller -->
 
-<body ng-app="helloWorld" ng-controller="MainCtrl">
-    <section class='container'>
-        <div class="page-header">
-            <h1> {{test}} </h1>
+<body ng-app="helloTaskList" ng-controller="MainCtrl">
+
+    <!-- page header and task count -->
+    <div class="jumbotron text-center">
+        <h1>You have {{ tasks.length }} items in your task list</h1>
+    </div>
+    <div class='container'>
+        <!-- TASK LIST -->
+        <div id="task-list" class="row">
+            <div class="col-sm-8 col-sm-offset-3">
+                <div class="checkbox" ng-repeat="task in tasks">
+                    <label>
+                      <input type="checkbox" ng-click="deleteTask(task._id)">
+                      {{ task.text }}
+                    </label>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <section class='col-xs-12 col-sm-6 col-md-6'>
-                <section>
-                    <h2>How to use this example application</h2>
-                    <p>For instructions on how to use this application with Digital Garage, start by reading the <a href="http://docs.thedigitalgarage.io/dev_guide/templates.html#using-the-quickstart-templates">Developer Guide</a>.</p>
 
-                    <h2>Deploying code changes</h2>
-                    <p>
-                        The source code for this application is available to be forked from the <a href="https://www.github.com/thedigitalgarage/mean-ex">Digital Garage GitHub repository</a>. You can configure a webhook in your repository to make Digital
-                        Garage automatically start a build whenever you push your code:
-                    </p>
+        <!-- FORM TO CREATE TASKS -->
+        <div id="task-form" class="row">
+            <div class="col-sm-8 col-sm-offset-2 text-center">
+                <form>
+                    <div class="form-group">
 
-                    <ol>
-                        <li>From the Web Console homepage, navigate to your project</li>
-                        <li>Click on Browse &gt; Builds</li>
-                        <li>Click the link with your BuildConfig name</li>
-                        <li>Click the Configuration tab</li>
-                        <li>Click the "Copy to clipboard" icon to the right of the "GitHub webhook URL" field</li>
-                        <li>Navigate to your repository on GitHub and click on repository settings &gt; webhooks &gt; Add webhook</li>
-                        <li>Paste your webhook URL provided by Digital Garage</li>
-                        <li>Leave the defaults for the remaining fields &mdash; that's it!</li>
-                    </ol>
-                    <p>After you save your webhook, if you refresh your settings page you can see the status of the ping that Github sent to Digital Garage to verify it can reach the server.</p>
-                    <p>Note: adding a webhook requires your Digital Garage server to be reachable from GitHub.</p>
+                        <!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
+                        <input type="text" class="form-control input-lg text-center" placeholder="Pick up dry cleaning" ng-model="formData.text">
+                    </div>
 
-                    <h3>Working in your local Git repository</h3>
-                    <p>If you forked the application from the Digital Garage GitHub example, you'll need to manually clone the repository to your local system. Copy the application's source code Git URL and then run:</p>
-                    <pre>$ git clone &lt;git_url&gt; &lt;directory_to_create&gt;
-# Within your project directory
-# Commit your changes and push to Digital Garage
-$ git commit -a -m 'Some commit message'
-$ git push</pre>
-                    <p>After pushing changes, you'll need to manually trigger a build if you did not setup a webhook as described above.</p>
-                </section>
-            </section>
-            <section class="col-xs-12 col-sm-6 col-md-6">
-
-                <h2>Managing your application</h2>
-
-                <p>Documentation on how to manage your application from the Web Console or Command Line is available at the <a href="http://docs.thedigitalgarage.io/dev_guide/overview.html">Developer Guide</a>.</p>
-
-                <h3>Web Console</h3>
-                <p>You can use the Web Console to view the state of your application components and launch new builds.</p>
-
-                <h3>Command Line</h3>
-                <p>With the <a href="http://docs.thedigitalgarage.io/cli_reference/overview.html">Digital Garage command line interface</a> (CLI), you can create applications and manage projects from a terminal.</p>
-
-                <h2>Development Resources</h2>
-                <ul>
-                    <li><a href="http://docs.thedigitalgarage.io/welcome/index.html">Digital Garage Documentation</a></li>
-                    <li><a href="http://docs.thedigitalgarage.io/using_images/s2i_images/nodejs.html">Getting Started with Node.js on Digital Garage</a></li>
-                    <li><a href="http://stackoverflow.com/questions/tagged/openshift">Stack Overflow questions for Openshift Origin</a></li>
-                    <li><a href="http://git-scm.com/documentation">Git documentation</a></li>
-                </ul>
-            </section>
+                    <!-- createTask() WILL CREATE NEW TASKS -->
+                    <button type="submit" class="btn btn-primary btn-lg" style="background-color: #65bc45; border-color: green;" ng-click="createTask()">Add</button>
+                </form>
+            </div>
         </div>
-    </section>
+    </div>
 </body>
 
 </html>
